# gentypelibxml

./: .gitignore  CMakeLists.txt  manifest.xml  setup.py  stack.yaml
cmake/: gentypelibxml-extras.cmake.in
scripts/: CMakeLists.txt  gen_typelibxml.py  msg.xml.template  srv.xml.template
